--- a/rabbitMQ/pom.xml
+++ b/rabbitMQ/pom.xml
@@ -4,13 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
     <groupId>com.sumeng.rabbitmq</groupId>
     <artifactId>rabbitMQ</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.14.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
     <modules>
         <module>rabbitmq-consumer</module>
         <module>rabbitmq-producer</module>
+        <module>consumer-springboot</module>
+        <module>producer-springboot</module>
     </modules>
 
 
